RESOLVED FIXED47383
[EFL] Fix shared timers on EFL port - make them thread safe.
https://bugs.webkit.org/show_bug.cgi?id=47383
Summary [EFL] Fix shared timers on EFL port - make them thread safe.
Rafael Antognolli
Reported 2010-10-07 16:04:45 PDT
[EFL] Fix shared timers on EFL port - make them thread safe.
Attachments
Patch (4.00 KB, patch)
2010-10-07 16:14 PDT, Rafael Antognolli
no flags
Rafael Antognolli
Comment 1 2010-10-07 16:14:22 PDT
Rafael Antognolli
Comment 2 2010-10-07 16:18:48 PDT
As explained in the changelog, this patch makes shared timers thread safe for EFL port. I'm not sure about the function names, maybe would be good to use some namespace on them, since they are not methods from a class? It would be good to get rid of the mutex too, since we just need it when creating the pipe from a thread that is not the main thread. Do you think it's possible to add a function inside ThreadTimers or SharedTimer like initializeSharedTimer (which would be called from the main thread) so we can create the pipe there?
WebKit Commit Bot
Comment 3 2010-10-07 17:28:44 PDT
Comment on attachment 70165 [details] Patch Clearing flags on attachment: 70165 Committed r69358: <http://trac.webkit.org/changeset/69358>
WebKit Commit Bot
Comment 4 2010-10-07 17:28:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.