2010-10-07  Rafael Antognolli  <antognolli@profusion.mobi>

Reviewed by Kenneth Rohde Christiansen.

        [EFL] Fix shared timers on EFL port - make them thread safe.
        https://bugs.webkit.org/show_bug.cgi?id=47383

        Using ecore_timer_add to create a timer from a thread that is
        not the main thread isn't safe. Now we add a pipe that is used
        to request a timer to be added in the main thread.

        In order to reduce some delay on timers that are added with a
        very small interval, the timer callback is called immediately
        if the interval is smaller than the mainloop frame time.

        No new features, so no tests added.

        * platform/efl/SharedTimerEfl.cpp:
        (WebCore::setSharedTimerFiredFunction):
        (WebCore::timerEvent):
        (WebCore::processTimers):
        (WebCore::pipeHandlerCb):
        (WebCore::stopSharedTimer):
        (WebCore::addNewTimer):
        (WebCore::setSharedTimerFireTime):

Canonical link: https://commits.webkit.org/59959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69358 268f45cc-cd09-0410-ab3c-d52691b4dbfc